Enclosed .cart in main

--- a/public/cart/index.html
+++ b/public/cart/index.html
@@ -23,12 +23,13 @@
         <a href="../roofing">Roofing</a>
       </div>
     </nav>
-
-    <div id="cart">
-      <h3>Cart</h3>
-      <ul id="cartItems"></ul>
-      <a id="list-enquiry" target="_blank">Enquire on WhatsApp</a>
-    </div>
+    <main class="main">
+      <div id="cart">
+        <h3>Cart</h3>
+        <ul id="cartItems"></ul>
+        <a id="list-enquiry" target="_blank">Enquire on WhatsApp</a>
+      </div>
+    </main>
     <script src="./cart.js"></script>
     <script>
       renderCart();
