--- a/public/sheet/index.html
+++ b/public/sheet/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sheet</title>
-    <meta
-      name="description"
-      content="Steel sheets"
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
     />
+    <link rel="stylesheet" href="../styles.css" />
+    <meta name="description" content="Steel sheets" />
 
     <meta property="og:title" content="sheets" />
-    <meta
-      property="og:description"
-      content="Steel sheets"
-    />
+    <meta property="og:description" content="Steel sheets" />
     <meta
       property="og:image"
       content="https://navkarmetal.7level.in/sheet.png"
@@ -21,12 +20,12 @@
     <meta property="og:url" content="https://navkarmetal.7level.in/sheet" />
     <meta property="og:type" content="website" />
 
-    <meta name="twitter:card" content="https://navkarmetal.7level.in/sheet.png" />
-    <meta name="twitter:title" content="sheet" />
     <meta
-      name="twitter:description"
-      content="Steel sheets"
+      name="twitter:card"
+      content="https://navkarmetal.7level.in/sheet.png"
     />
+    <meta name="twitter:title" content="sheet" />
+    <meta name="twitter:description" content="Steel sheets" />
     <meta
       name="twitter:image"
       content="https://navkarmetal.7level.in/sheet.png"
@@ -38,9 +37,9 @@
   </head>
   <body>
     <div>
-        <div>
-            <img src="../sheet.png" alt="">
-        </div>
+      <div>
+        <img src="../sheet.png" alt="" />
+      </div>
     </div>
   </body>
 </html>
