--- a/flat/index.html
+++ b/flat/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flat</title>
-    <meta
-      name="description"
-      content="Steel flats"
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
     />
+    <link rel="stylesheet" href="../styles.css" />
+    <meta name="description" content="Steel flats" />
 
     <meta property="og:title" content="flats" />
-    <meta
-      property="og:description"
-      content="Steel flats"
-    />
+    <meta property="og:description" content="Steel flats" />
     <meta
       property="og:image"
       content="https://navkarmetal.7level.in/flat.png"
@@ -21,26 +20,25 @@
     <meta property="og:url" content="https://navkarmetal.7level.in/flat" />
     <meta property="og:type" content="website" />
 
-    <meta name="twitter:card" content="https://navkarmetal.7level.in/flat.png" />
-    <meta name="twitter:title" content="flat" />
     <meta
-      name="twitter:description"
-      content="Steel flats"
+      name="twitter:card"
+      content="https://navkarmetal.7level.in/flat.png"
     />
+    <meta name="twitter:title" content="flat" />
+    <meta name="twitter:description" content="Steel flats" />
     <meta
       name="twitter:image"
       content="https://navkarmetal.7level.in/flat.png"
     />
     <meta name="twitter:url" content="https://navkarmetal.7level.in/flat" />
 
-    <!-- Optional: Author -->
     <meta name="author" content="Navkar Metal" />
   </head>
   <body>
     <div>
-        <div>
-            <img src="../flat.png" alt="">
-        </div>
+      <div>
+        <img src="../flat.png" alt="" />
+      </div>
     </div>
   </body>
 </html>
