--- a/public/pipe/index.html
+++ b/public/pipe/index.html
@@ -738,7 +738,7 @@
 
         // Encode and apply
         const encoded = encodeURIComponent(message);
-        enquiryList.setAttribute("href", `https://wa.me/?text=${encoded}`);
+        enquiryList.setAttribute("href", `https://wa.me/9860140359?text=${encoded}`);
         console.log(cart);
       }
     </script>
