Added new categories and made mm default unit for size

--- a/public/pipe/index.html
+++ b/public/pipe/index.html
@@ -24,6 +24,12 @@
         <button class="tab btn p-md fw-500 font-size-md" data-tab="flat">
           Flat
         </button>
+        <button class="tab btn p-md fw-500 font-size-md" data-tab="channel">
+          Channel
+        </button>
+        <button class="tab btn p-md fw-500 font-size-md" data-tab="sheet">
+          Sheet
+        </button>
       </div>
 
       <div id="pipe-content" class="tab-content">
@@ -49,8 +55,8 @@
                 <div class="table-header">
                   Size
                   <div class="unit-toggle">
-                    <button class="unit-btn active" data-unit="in">in</button>
-                    <button class="unit-btn" data-unit="mm">mm</button>
+                    <button class="unit-btn active" data-unit="mm">mm</button>
+                    <button class="unit-btn" data-unit="in">in</button>
                   </div>
                 </div>
                 <div class="table-header">Weight (kg/pc)</div>
@@ -69,8 +75,8 @@
                 <div class="table-header">
                   Size
                   <div class="unit-toggle">
-                    <button class="unit-btn active" data-unit="in">in</button>
-                    <button class="unit-btn" data-unit="mm">mm</button>
+                    <button class="unit-btn active" data-unit="mm">mm</button>
+                    <button class="unit-btn" data-unit="in">in</button>
                   </div>
                 </div>
                 <div class="table-header">Weight (kg/pc)</div>
@@ -89,8 +95,8 @@
                 <div class="table-header">
                   Size
                   <div class="unit-toggle">
-                    <button class="unit-btn active" data-unit="in">in</button>
-                    <button class="unit-btn" data-unit="mm">mm</button>
+                    <button class="unit-btn active" data-unit="mm">mm</button>
+                    <button class="unit-btn" data-unit="in">in</button>
                   </div>
                 </div>
                 <div class="table-header">Weight (kg/pc)</div>
@@ -132,11 +138,7 @@
               <div class="table-row">
                 <div class="table-header">Item Name</div>
                 <div class="table-header">
-                  Size
-                  <div class="unit-toggle">
-                    <button class="unit-btn active" data-unit="in">in</button>
-                    <button class="unit-btn" data-unit="mm">mm</button>
-                  </div>
+                  Size (mm)
                 </div>
                 <div class="table-header">Weight (kg/pc)</div>
                 <div class="table-header text-center">Quantity</div>
@@ -168,7 +170,6 @@
         </button>
       </div>
 
-      <!-- Flat Content -->
       <div id="flat-content" class="tab-content hidden">
         <div class="product-card">
           <div class="product-table">
@@ -176,11 +177,7 @@
               <div class="table-row">
                 <div class="table-header">Item Name</div>
                 <div class="table-header">
-                  Size
-                  <div class="unit-toggle">
-                    <button class="unit-btn active" data-unit="in">in</button>
-                    <button class="unit-btn" data-unit="mm">mm</button>
-                  </div>
+                  Size (mm)
                 </div>
                 <div class="table-header">Weight (kg/pc)</div>
                 <div class="table-header text-center">Quantity</div>
@@ -190,6 +187,86 @@
           </div>
         </div>
         <button class="add-to-cart-btn btn p-lg w-100" id="flat-add-btn">
+          <span
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="lucide lucide-shopping-cart mr-2 h-5 w-5"
+              aria-hidden="true"
+            >
+              <circle cx="8" cy="21" r="1"></circle>
+              <circle cx="19" cy="21" r="1"></circle>
+              <path
+                d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
+              ></path></svg></span>
+          Add Selected to Cart
+        </button>
+      </div>
+      <div id="channel-content" class="tab-content hidden">
+        <div class="product-card">
+          <div class="product-table">
+            <div class="table-head">
+              <div class="table-row">
+                <div class="table-header">Item Name</div>
+                <div class="table-header">
+                  Size (mm)
+                </div>
+                <div class="table-header">Weight (kg/pc)</div>
+                <div class="table-header text-center">Quantity</div>
+              </div>
+            </div>
+            <div class="table-body" id="channel-items"></div>
+          </div>
+        </div>
+        <button class="add-to-cart-btn btn p-lg w-100" id="channel-add-btn">
+          <span
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="lucide lucide-shopping-cart mr-2 h-5 w-5"
+              aria-hidden="true"
+            >
+              <circle cx="8" cy="21" r="1"></circle>
+              <circle cx="19" cy="21" r="1"></circle>
+              <path
+                d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
+              ></path></svg></span>
+          Add Selected to Cart
+        </button>
+      </div>
+
+      <div id="sheet-content" class="tab-content hidden">
+        <div class="mb-2 mobile-only text-center text-muted-foreground">8X4 Sheet</div>
+        <div class="product-card">
+          <div class="product-table">
+            <div class="table-head">
+              <div class="table-row">
+                <div class="table-header">Item Name</div>
+                <div class="table-header">
+                  Thickness (mm)
+                </div>
+                <div class="table-header">Weight (kg/pc)</div>
+                <div class="table-header text-center">Quantity</div>
+              </div>
+            </div>
+            <div class="table-body" id="sheet-items"></div>
+          </div>
+        </div>
+        <button class="add-to-cart-btn btn p-lg w-100" id="sheet-add-btn">
           <span
             ><svg
               xmlns="http://www.w3.org/2000/svg"
