Made toggle unit to show for pipe.

--- a/public/pipe/index.html
+++ b/public/pipe/index.html
@@ -291,8 +291,7 @@
       </div>
     </div>
 
-    <!-- Cart Button -->
-    <button class="cart-button btn p-md" id="cart-btn">
+    <button class="cart-button btn p-lg" id="cart-btn">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="24"
@@ -315,7 +314,6 @@
       Cart <span class="cart-count" id="cart-count">0</span>
     </button>
 
-    <!-- Cart Drawer -->
     <div class="cart-overlay" id="cart-overlay"></div>
     <div class="cart-drawer" id="cart-drawer">
       <div class="cart-header">
@@ -323,19 +321,7 @@
         <button class="close-btn" id="close-cart">×</button>
       </div>
       <div class="item-attributes">
-        <div class="cart-unit-toggle">
-          <div>
-            <span style="font-size: 14px; font-weight: 500">Size</span>
-            <div class="unit-toggle">
-              <button class="unit-btn active" data-unit="in" id="cart-unit-in">
-                in
-              </button>
-              <button class="unit-btn" data-unit="mm" id="cart-unit-mm">
-                mm
-              </button>
-            </div>
-          </div>
-        </div>
+        <span></span>
         <span class="text-muted-foreground">Weight (kg/pc)</span>
         <span class="text-muted-foreground text-center">Quantity</span>
         <span class="text-muted-foreground"></span>
