Added total weight, changed "Checkout" to "Place Order". Changed script type to module

--- a/public/pipe/index.html
+++ b/public/pipe/index.html
@@ -333,9 +333,13 @@
           <span>Total Items:</span>
           <span id="total-items">0</span>
         </div>
-        <button class="checkout-btn btn p-lg w-100">Checkout</button>
+        <div class="cart-total">
+          <span>Total Weight:</span>
+          <span><span id="total-weight">0</span> kg</span>
+        </div>
+        <button class="checkout-btn btn p-lg w-100">Place Order</button>
       </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="./script.js" type="module"></script>
   </body>
 </html>
