--- a/public/products/index.html
+++ b/public/products/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <link rel="icon" type="image/x-icon" href="../7level.ico" />
     <title>Premium Construction Metals</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
