--- a/public/products/index.html
+++ b/public/products/index.html
@@ -108,7 +108,7 @@
                       <button class="unit-btn" data-unit="in">in</button>
                     </div>
                   </div>
-                  <div class="table-header">Weight (kg/pc)</div>
+                  <div class="table-header">Weight</div>
                   <div class="table-header text-center text-center">
                     Quantity
                   </div>
@@ -133,7 +133,7 @@
                       <button class="unit-btn" data-unit="in">in</button>
                     </div>
                   </div>
-                  <div class="table-header">Weight (kg/pc)</div>
+                  <div class="table-header">Weight</div>
                   <div class="table-header text-center">Quantity</div>
                 </div>
               </div>
@@ -153,7 +153,7 @@
                       <button class="unit-btn" data-unit="in">in</button>
                     </div>
                   </div>
-                  <div class="table-header">Weight (kg/pc)</div>
+                  <div class="table-header">Weight</div>
                   <div class="table-header text-center">Quantity</div>
                 </div>
               </div>
@@ -192,7 +192,7 @@
                 <div class="table-row">
                   <div class="table-header">Item Name</div>
                   <div class="table-header">Size (mm)</div>
-                  <div class="table-header">Weight (kg/pc)</div>
+                  <div class="table-header">Weight</div>
                   <div class="table-header text-center">Quantity</div>
                 </div>
               </div>
@@ -230,7 +230,7 @@
                 <div class="table-row">
                   <div class="table-header">Item Name</div>
                   <div class="table-header">Size (mm)</div>
-                  <div class="table-header">Weight (kg/pc)</div>
+                  <div class="table-header">Weight</div>
                   <div class="table-header text-center">Quantity</div>
                 </div>
               </div>
@@ -267,7 +267,7 @@
                 <div class="table-row">
                   <div class="table-header">Item Name</div>
                   <div class="table-header">Size (mm)</div>
-                  <div class="table-header">Weight (kg/pc)</div>
+                  <div class="table-header">Weight</div>
                   <div class="table-header text-center">Quantity</div>
                 </div>
               </div>
@@ -308,7 +308,7 @@
                 <div class="table-row">
                   <div class="table-header">Item Name</div>
                   <div class="table-header">Thickness (mm)</div>
-                  <div class="table-header">Weight (kg/pc)</div>
+                  <div class="table-header">Weight</div>
                   <div class="table-header text-center">Quantity</div>
                 </div>
               </div>
