--- a/public/products/index.html
+++ b/public/products/index.html
@@ -341,18 +341,18 @@
       </div>
     </main>
 
-    <button class="cart-button btn p-lg" id="cart-btn">
+    <button class="floating-add-cart-btn btn p-lg hidden" id="floating-add-cart">
       <svg
         xmlns="http://www.w3.org/2000/svg"
-        width="24"
-        height="24"
+        width="32"
+        height="32"
         viewBox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
-        class="lucide lucide-shopping-cart mr-2 h-5 w-5"
+        class="lucide lucide-shopping-cart h-5 w-5"
         aria-hidden="true"
       >
         <circle cx="8" cy="21" r="1"></circle>
@@ -361,7 +361,7 @@
           d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
         ></path>
       </svg>
-      Cart <span class="cart-count" id="cart-count">0</span>
+      Add to Cart
     </button>
 
     <div class="cart-overlay" id="cart-overlay"></div>
