Removed (kg/pc) in cart

--- a/public/products/index.html
+++ b/public/products/index.html
@@ -372,7 +372,7 @@
       </div>
       <div class="item-attributes">
         <span></span>
-        <span class="text-muted-foreground">Weight (kg/pc)</span>
+        <span class="text-muted-foreground">Weight</span>
         <span class="text-muted-foreground text-center">Quantity</span>
         <span class="text-muted-foreground"></span>
       </div>
