--- a/public/products/index.html
+++ b/public/products/index.html
@@ -371,10 +371,10 @@
         <button class="close-btn" id="close-cart">×</button>
       </div>
       <div class="item-attributes">
-        <span></span>
+        <span class="text-muted-foreground">Item</span>
         <span class="text-muted-foreground">Weight</span>
         <span class="text-muted-foreground text-center">Quantity</span>
-        <span class="text-muted-foreground"></span>
+        <span class="text-muted-foreground">Total Item Weight</span>
       </div>
       <div class="cart-content" id="cart-items"></div>
       <div class="cart-footer">
@@ -400,7 +400,7 @@
         <button class="checkout-btn btn p-lg w-100">Place Order</button>
       </div>
     </div>
-    <script src="./marquee.js"></script>
+    <script src="./marquee.js" type="module"></script>
     <script src="./script.js" type="module"></script>
   </body>
 </html>
