Commented item-attributes

--- a/public/products/index.html
+++ b/public/products/index.html
@@ -370,12 +370,12 @@
         <h2>Your Cart</h2>
         <button class="close-btn" id="close-cart">×</button>
       </div>
-      <div class="item-attributes">
+      <!-- <div class="item-attributes">
         <span class="text-muted-foreground">Item</span>
         <span class="text-muted-foreground">Weight</span>
         <span class="text-muted-foreground text-center">Quantity</span>
         <span class="text-muted-foreground">Total Item Weight</span>
-      </div>
+      </div> -->
       <div class="cart-content" id="cart-items"></div>
       <div class="cart-footer">
         <button class="clear-cart-btn btn p-md w-100" id="clear-cart-btn">
