--- a/products/index.html
+++ b/products/index.html
@@ -370,12 +370,12 @@
         <h2>Your Cart</h2>
         <button class="close-btn" id="close-cart">×</button>
       </div>
-      <div class="item-attributes">
-        <span></span>
+      <!-- <div class="item-attributes">
+        <span class="text-muted-foreground">Item</span>
         <span class="text-muted-foreground">Weight</span>
         <span class="text-muted-foreground text-center">Quantity</span>
-        <span class="text-muted-foreground"></span>
-      </div>
+        <span class="text-muted-foreground">Total Item Weight</span>
+      </div> -->
       <div class="cart-content" id="cart-items"></div>
       <div class="cart-footer">
         <button class="clear-cart-btn btn p-md w-100" id="clear-cart-btn">
@@ -400,7 +400,7 @@
         <button class="checkout-btn btn p-lg w-100">Place Order</button>
       </div>
     </div>
-    <script src="./marquee.js"></script>
+    <script src="./marquee.js" type="module"></script>
     <script src="./script.js" type="module"></script>
   </body>
 </html>
